--- a/angular.json
+++ b/angular.json
@@ -50,6 +50,12 @@
               ],
               "outputHashing": "all"
             },
+            "fileReplacements": [
+              {
+                "replace": "client/src/environments/environment.ts",
+                "with": "client/src/environments/environment.prod.ts"
+              }
+            ],
             "development": {
               "optimization": false,
               "extractLicenses": false,
